compiler-tests/src/test/data/diagnostic/functioninject/AssistedUnderscoreContextParamRequiresIdentifier.kt
// RENDER_DIAGNOSTICS_FULL_TEXT
// LANGUAGE: +ContextParameters
// ENABLE_TOP_LEVEL_FUNCTION_INJECTION

@Inject
context(@Assisted <!FUNCTION_INJECT_ERROR!>_<!>: String)
fun App() {
  // ...
}
